[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main/assets/background_3.png" type="Texture" id=1]
[ext_resource path="res://GUI/scenes/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main/scripts/ScoreManager.gd" type="Script" id=3]
[ext_resource path="res://Main/scripts/SatelliteSpawner.gd" type="Script" id=4]
[ext_resource path="res://Main/scripts/GameManager.gd" type="Script" id=5]
[ext_resource path="res://Main/scripts/UFOSpawner.gd" type="Script" id=6]
[ext_resource path="res://Main/scripts/ExplosionManager.gd" type="Script" id=7]

[node name="GameManager" type="Node"]
pause_mode = 2
script = ExtResource( 5 )

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="ExplosionManager" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="SatelliteSpawner" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="UFOSpawner" type="Node2D" parent="."]
pause_mode = 1
position = Vector2( -1, 0 )
script = ExtResource( 6 )

[node name="UFOSpawnTimer" type="Timer" parent="UFOSpawner"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 2 )]
pause_mode = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -128

[node name="Background" type="Control" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2/Background"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
